[gd_scene load_steps=7 format=2]

[ext_resource path="res://Juego/UI/Hud.gd" type="Script" id=2]
[ext_resource path="res://Juego/UI/ContenedorInformacion.tscn" type="PackedScene" id=3]
[ext_resource path="res://Juego/UI/ContenedorInformacionEnergia.tscn" type="PackedScene" id=4]
[ext_resource path="res://Juego/UI/MiniMapa/MiniMapa.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=1]
resource_name = "default"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Hud" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="FadeCanvas" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="FadeCanvas"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="FadeCanvas/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="FadeCanvas"]
anims/default = SubResource( 1 )
anims/fade_in = SubResource( 2 )

[node name="InfoZonaRecarga" parent="." groups=[
"contenedor_info",
] instance=ExtResource( 3 )]

[node name="InfoMteoritos" parent="." groups=[
"contenedor_info",
] instance=ExtResource( 3 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -71.0
margin_bottom = 0.0

[node name="InfoTiempoRestantes" parent="." groups=[
"contenedor_info",
] instance=ExtResource( 3 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -257.0
margin_right = 0.0

[node name="InfoLaser" parent="." groups=[
"contenedor_info",
] instance=ExtResource( 4 )]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -257.0
margin_top = -71.0
margin_right = 0.0
margin_bottom = 0.0

[node name="InfoEscudo" parent="." groups=[
"contenedor_info",
] instance=ExtResource( 4 )]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -257.0
margin_top = -71.0
margin_right = 0.0
margin_bottom = 0.0

[node name="MiniMapa" parent="." instance=ExtResource( 5 )]
mouse_filter = 2

[node name="ContenedorIconos" parent="MiniMapa/CuadroMiniMapa" index="0"]
mouse_filter = 2

[node name="ZonaRenderizadoMiniMapa" parent="MiniMapa/CuadroMiniMapa/ContenedorIconos" index="0"]
mouse_filter = 2

[node name="IconoPlayer" parent="MiniMapa/CuadroMiniMapa/ContenedorIconos/ZonaRenderizadoMiniMapa" index="0"]
visible = false

[node name="IconoBaseEnemiga" parent="MiniMapa/CuadroMiniMapa/ContenedorIconos/ZonaRenderizadoMiniMapa" index="1"]
visible = false

[node name="IconoEstacion" parent="MiniMapa/CuadroMiniMapa/ContenedorIconos/ZonaRenderizadoMiniMapa" index="2"]
visible = false

[node name="IconoRele" parent="MiniMapa/CuadroMiniMapa/ContenedorIconos/ZonaRenderizadoMiniMapa" index="3"]
visible = false

[node name="IconoInterceptor" parent="MiniMapa/CuadroMiniMapa/ContenedorIconos/ZonaRenderizadoMiniMapa" index="4"]
visible = false

[editable path="InfoZonaRecarga"]

[editable path="InfoMteoritos"]

[editable path="InfoTiempoRestantes"]

[editable path="InfoLaser"]

[editable path="InfoEscudo"]

[editable path="MiniMapa"]
